--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "shoppinglist",
-  "version": "0.0.1",
-  "private": true,
-  "devDependencies": {
-    "enzyme": "^2.4.1",
-    "react-addons-test-utils": "^15.3.0",
-    "react-scripts": "^0.6.0"
-  },
-  "dependencies": {
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0",
-    "react-redux": "^4.4.5",
+	"name": "shoppinglistrn",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"start": "node node_modules/react-native/local-cli/cli.js start",
+		"test": "jest"
+	},
+	"dependencies": {
+		"react": "15.4.1",
+		"react-dom": "^15.3.0",
+		"react-native": "0.39.2",
+		"react-redux": "^4.4.5",
     "redux": "^3.5.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "test": "react-scripts test"
-  }
+	},
+	"devDependencies": {
+		"babel-jest": "18.0.0",
+		"babel-preset-react-native": "1.9.1",
+		"jest": "18.0.0",
+		"react-test-renderer": "15.4.1"
+	},
+	"jest": {
+		"preset": "react-native"
+	}
 }
